# NFT-Minting-Dapp

./: .gitignore  README.md
solana-nft-marketplace/: .gitignore  Anchor.toml  package.json
solana-nft-marketplace/candy-machine/: cache.json  config.json  validate_errors.json
solana-nft-marketplace/candy-machine/assets/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  collection.json
solana-nft-marketplace/programs/solana-nft-marketplace/: Cargo.toml
solana-nft-marketplace/programs/solana-nft-marketplace/src/: lib.rs
solana-nft-marketplace/programs/solana-nft-marketplace/tests/: test_collections.rs  test_initialize.rs
solana-nft-marketplace/scripts/: batch-mint.ts  cost-comparison.ts  das-client.ts  setup-tree.ts
solana-nft-marketplace/tests/: solana-nft-marketplace.ts
