[package]
name = "solana-nft-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.1", features = ["token", "associated_token", "metadata"] }
mpl-bubblegum = { version = "3.0.0" }
[dev-dependencies]
litesvm = "0.10.0"
solana-keypair = "3.1.2"
solana-signer = "3.0.1"
solana-instruction = "3.4.0"
solana-pubkey = "4.2.0"
solana-transaction = { version = "3.1.0", features = ["bincode"] }

[[test]]
name = "test_collections"
path = "tests/test_collections.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
